compiler/tests/fail/unroll/x86-64/bug_150.jazz
export
fn main(reg u64 x) -> reg u64 {
  inline int i;
  reg u64 y;
  y = 0;
  for i = 0 to 10 {
    #inline
    if (x == i) {
      y = x;
    }
  }
  return y;
}
